# worklogger

./: LICENSE.md  README.md  alembic.ini  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: 26c42d0d48f0_added_project_batch_tables.py  2b03271c952a_.py  3137b8f27851_added_enabled_field.py  4b04a6ff56d7_added_code_metrics_table.py  5d6bad884aef_add_is_processed_field.py  5feaef85365a_added_branch_commit_for_patch.py  74530e0c5061_add_metrics_and_worklogs_table.py  94a72fb4cdd4_added_last_patch_and_last_branch_to_.py  ba748dd8da33_added_project_commits_table.py  c6fab014f70e_added_processed_flag.py  c7bb4e36e4a8_.py  ca24ff458a4b_.py  d3545af6316d_initial_migration.py  dbfe150a36fb_new_fields_for_threads.py  e02dc5223025_added_code_metrics_table.py  ed8ea3907251_gpt_threads.py  f198d38c3ba7_add_project_references_to_dynamically_.py
api/code_watch/: diff_watcher.py
api/commit_watch/: commit_watcher.py
api/jira/: client.py
api/metrics/: batch_metrics.py  collector.py
api/openai/: assistant.py  client.py
api/telegram/: bot.py
domain/: common_db.py  diff.py  project.py  worklog.py
domain/db/: batches.py
service/: assistant.py  gui.py  runner.py  worklogs.py
service/agents/: commons.py  manager.py
